# cinema_subtitle_translator

./: .env.example  __init__.py  pyproject.toml  readme.md  requirements.txt
api/: __init__.py  deepseek_client.py
config/: config.yaml  user_preferences.yaml
core/: __init__.py  translation_engine.py
intelligence/: __init__.py  movie_knowledge.py
my-go-project/: README.md
security/: __init__.py  config.py
storage/: __init__.py  cache_manager.py
