[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinema-subtitle-translator"
version = "1.0.0"
description = "AI-powered professional subtitle translation system for cinema"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cinema Translator Team"}
]
keywords = ["subtitle", "translation", "ai", "cinema", "movies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pysubs2>=1.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "requests>=2.31.0",
    "redis>=4.5.0",
    "diskcache>=5.6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "cryptography>=41.0.0",
    "spacy>=3.5.0",
    "jieba>=0.42.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "prometheus-client>=0.17.0",
]

[project.scripts]
cinema-translator = "cinema_subtitle_translator.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cinema_subtitle_translator*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true